--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
                         <ul>
                             <li>Address: 60-49 Road 11378 New York</li>
                             <li>Phone: +65 11.188.888</li>
-                            <li>Email: hello@colorlib.com</li>
+                            <li>Email: dvtcntt5k13@gmail.com</li>
                         </ul>
                     </div>
                 </div>
